# C-_Exercise

5/: 5-10set_send_buffer.cpp  5-6oobsend.cpp  5-7oobrecv.cpp  daytime  setRecvBuf  setSendBuf  testoobsend
DaFen/: CMakeLists.txt  main.cpp
Elevator/: CMakeLists.txt  main.cpp
IntelligenceClass/: CMakeLists.txt  main.cpp
Linux高性能服务器编程/: README.md
Linux高性能服务器编程/5/: 5-12daytime.cpp
Linux高性能服务器编程/5-Linux网络编程基础API/: 5-11set_recv_buffer.cpp  testoobrecv
STLTest/: CMakeLists.txt  main.cpp
STLYuanli/: CMakeLists.txt  main.cpp
Vector/: CMakeLists.txt  main.cpp
calculator/: CMakeLists.txt  main.cpp
class-test/: CMakeLists.txt  main.cpp
classStudent/: CMakeLists.txt  main.cpp
exception/: CMakeLists.txt  main.cpp
helloWorld/: CMakeLists.txt  main.cpp
lingxingjicheng/: CMakeLists.txt  main.cpp
openssl-C++/: CMakeLists.txt  a.out  main  main.cpp  persion.pb.cc  persion.pb.h  persion.proto
openssl-test/: main  main.cpp  persion.pb.cc  persion.pb.h  persion.proto
speech/: CMakeLists.txt  main.cpp
string/: CMakeLists.txt  main.cpp
template/: CMakeLists.txt  main.cpp
test/: main.cpp
zoo/: CMakeLists.txt  main.cpp
